--- a/config/static/css/style.css
+++ b/config/static/css/style.css
@@ -6,6 +6,27 @@ body {
   background-color: #CCFFEB !important;
 }
 
+.footer-slogan {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer-slogan-img {
+  max-width: 600px;
+  width: 100%;
+  height: auto;
+  margin: 0 auto;
+}
+
+.footer-slogan-text {
+  font-size: 1rem;
+  font-weight: 500;
+  color: #333;
+  margin-top: 0.5rem;
+}
+
 .btn-secondary {
   color: #fff !important; }
 
