--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,7 @@
   </head>
   <body>
     {% include 'partials/_navbar1.html' %}
+    {% include 'partials/_alert.html' %} 
     {% block content %}{% endblock %}
     {% include 'partials/_footer.html' %}
     <script src={% static "js/jquery-3.3.1.min.js" %}></script>
