--- a/templates/partials/_navbar1.html
+++ b/templates/partials/_navbar1.html
@@ -1,7 +1,7 @@
 {% load static %}
 <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
   <div class="container">
-    <a class="navbar-brand" href={% url 'pages:index' %}>
+    <a class="navbar-brand" href={% url 'activities:list' %}>
           <img src={% static "img/kslogo.png" %} class="logo" alt="" />
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup">
@@ -45,12 +45,14 @@
         <li {% if '/newsletter/' == request.path %} class="nav-item active mr-4" {% else %} class="nav-item mr-4" {% endif %}>
         <a class="nav-link" href="{% url 'newsletter:archive' %}">牧者心聲</a>
         </li>
+
       </ul>
 
           <ul class="navbar-nav ml-auto">
             {% if user.is_authenticated %}
-            <li {%if 'about' in request.path %} class="nav-item mr-4 active" {% else %} class="nav-item mr-4" {% endif %}>
-              <a class="nav-link" href="{% url 'pages:index' %}"> 您好！ {{user.first_name}} </a>
+            <li class="nav-item mr-3"> 您好！{{user.first_name}}</li>
+            <li {%if 'about' in request.path %} class="nav-item mr-3 active" {% else %} class="nav-item mr-3" {% endif %}>
+              <a class="nav-link" href="{% url 'activities:dashboard' %}"> 我的活動 </a>
             </li>
             <!-- logout -->
              <li class="nav-item mr-3">
