--- a/templates/pages/contact.html
+++ b/templates/pages/contact.html
@@ -1,6 +1,37 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="container mt-4 mb-5">
-<h3>Contact Us</h3>
+<h3>聯絡我們 </h3>
+
+</br>
+<section class="text-warning text-left">
+      <h4>我們的位置</p></h4>
+
+</br>
+
+<div class="h4 text-dark mt-1 mb-3">
+
+<section class="text-info text-left">
+辦公室：粉嶺嘉盛苑嘉揚閣810室
+
+<br/>
+崇拜地址：粉嶺嘉盛苑嘉耀閣地下
+
+（九龍城浸信會嘉福幼稚園）
+
+<br/>
+聯絡電話：2676 7978<br/>
+
+whatsapp 電話：9886 4945 </br>
+
+電郵地址：contact@ksbaptist-hk.org </br>
+
+教會網頁：<a href="https://www.ksbaptist-hk.org">www.ksbaptist-hk.org</a></br>
+
+</br>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3686.2864351027815!2d114.13169007572448!3d22.49343393586646!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3403f618775fc847%3A0x9d9265c8839cf4e7!2sKa%20Shing%20Baptist%20Church!5e0!3m2!1sen!2shk!4v1768448095455!5m2!1sen!2shk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+</section>
+</div>
 </div>
 {% endblock %}
