--- a/templates/pages/giving.html
+++ b/templates/pages/giving.html
@@ -1,6 +1,35 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" 
+    integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" 
+    crossorigin="anonymous"
+    />
+    
 {% extends "base.html" %}
 {% block content %}
+
 <div class="container mt-4 mb-5">
-<h3>Our Giving</h3>
+<h3>奉獻方法</h3>
+
+
+<h5>少種的少收；多種的多收。各人要隨心所願，不要為難，不要勉強，因為神愛樂捐的人。（哥林多後書9:6-7）</h5>
+
+</br>
+
+<h3 class="pb-5 text-info">支票：抬頭「嘉盛浸信會有限公司」或 
+
+英文「Ka Shing Baptist Church Ltd.」</br>
+
+銀行轉數：東亞銀行戶口 015-156-40-02665-0</br>
+
+戶口名稱：嘉盛浸信會有限公司</br>
+
+<h3 class="pb-5 text-black">(存入款項後，請通知辦公室） </h3>
+
+</div>
+</div>
 </div>
 {% endblock %}
