--- a/templates/pages/partners.html
+++ b/templates/pages/partners.html
@@ -1,6 +1,26 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="container mt-4 mb-5">
-<h3>Our Partners</h3>
+<h3>合作夥伴</h3>
+</br>
+<section class="text-warning text-left">
+      <h4>九龍城浸信會嘉福幼稚園</p></h4>
+</section>
+<p class="h3">
+
+<section class="text-info text-left">
+<div class="card">
+    <img src="https://www.kafukkg.com/wp-content/uploads/2020/12/child_care_centre-02-1024x171.png" alt="" class="card-img-top" />
+    <div class="card-body">
+    <h4 class="card-title">
+        學校地址 ﹕新界粉嶺嘉盛苑嘉耀閣地下 </br>
+        學校電話 ﹕2675 4731 </br>
+        學校傳真 ﹕2675 7053 </br>
+        學校網址 ﹕<a href="https://www.kafukkg.com">https://www.kafukkg.com</a> 
+        </h4>
+    </section>
+</div>
+</div>
+<p>
 </div>
 {% endblock %}
