--- a/templates/activities/event_register.html
+++ b/templates/activities/event_register.html
@@ -51,7 +51,7 @@
               </div>
             {% endif %}
 
-            <form method="post" novalidate>
+            <form method="post" novalidate class="event-registration-form">
               {% csrf_token %}
 
               <div class="mb-4">
