--- a/templates/pages/giving.html
+++ b/templates/pages/giving.html
@@ -9,17 +9,29 @@
     />
     
 {% extends "base.html" %}
+<!-- load static -->
+{% load static %}
+<!-- about title -->
+{% block title %} | 認識我們  {% endblock %}
+<!-- about main content -->
 {% block content %}
+<!-- showcase -->
+<section id="showcase-inner" class="py-5 text-white">
+  <div class="container">
+    <div class="row text-center">
+      <div class="col-md-12">
+        <h3 class="display-4">奉獻方法</h3>
+        <p class="lead">少種的少收；多種的多收。各人要隨心所願，不要為難，不要勉強，因為神愛樂捐的人。（哥林多後書9:6-7）</p>
+      </div>
+    </div>
+  </div>
+</section>
 
 <div class="container mt-4 mb-5">
-<h3>奉獻方法</h3>
-
-
-<h5>少種的少收；多種的多收。各人要隨心所願，不要為難，不要勉強，因為神愛樂捐的人。（哥林多後書9:6-7）</h5>
 
 </br>
 
-<h3 class="pb-5 text-info">支票：抬頭「嘉盛浸信會有限公司」或 
+<h3 class="pb-5 text-info" style:"margin: 50px">支票：抬頭「嘉盛浸信會有限公司」或 
 
 英文「Ka Shing Baptist Church Ltd.」</br>
 
