--- a/templates/pages/contact.html
+++ b/templates/pages/contact.html
@@ -1,17 +1,26 @@
 {% extends "base.html" %}
+<!-- load static -->
+{% load static %}
+<!-- about title -->
+{% block title %} | 認識我們  {% endblock %}
+<!-- about main content -->
 {% block content %}
-<div class="container mt-4 mb-5">
-<h3>聯絡我們 </h3>
-
-</br>
-<section class="text-warning text-left">
-      <h4>我們的位置</p></h4>
-
-</br>
+<!-- showcase -->
+<section id="showcase-inner" class="py-5 text-white">
+  <div class="container">
+    <div class="row text-center">
+      <div class="col-md-12">
+        <h3 class="display-4">聯絡我們</h3>
+        <p class="lead">我們的位置</p>
+      </div>
+    </div>
+  </div>
+</section>
 
 <div class="h4 text-dark mt-1 mb-3">
 
-<section class="text-info text-left">
+<section class="text-info text-left" style="margin:50px">
+    
 辦公室：粉嶺嘉盛苑嘉揚閣810室
 
 <br/>
