--- a/templates/pages/faith.html
+++ b/templates/pages/faith.html
@@ -1,14 +1,24 @@
 {% extends "base.html" %}
+<!-- load static -->
+{% load static %}
+<!-- about title -->
+{% block title %} | 認識我們  {% endblock %}
+<!-- about main content -->
 {% block content %}
-<div class="container mt-4 mb-5">
-<h3>我們的信仰</h3>
+<!-- showcase -->
+<section id="showcase-inner" class="py-5 text-white">
+  <div class="container">
+    <div class="row text-center">
+      <div class="col-md-12">
+        <h3 class="display-4">我們的信仰</h3>
+        <p class="lead">使徒信經</p>
+      </div>
+    </div>
+  </div>
+</section>
 
 </br>
-<section class="text-warning text-left">
-<h3>使徒信經</h3>
-
-</br>
-<div class="h3 text-info mt-1 mb-3">
+<div class="h3 text-info mt-1 mb-3"style="margin:500px" >
 
 我信上帝，全能的父、創造天地的主。
 
