--- a/templates/pages/partners.html
+++ b/templates/pages/partners.html
@@ -1,11 +1,24 @@
 {% extends "base.html" %}
+<!-- load static -->
+{% load static %}
+<!-- about title -->
+{% block title %} | 認識我們  {% endblock %}
+<!-- about main content -->
 {% block content %}
-<div class="container mt-4 mb-5">
-<h3>合作夥伴</h3>
-</br>
-<section class="text-warning text-left">
-      <h4>九龍城浸信會嘉福幼稚園</p></h4>
+<!-- showcase -->
+<section id="showcase-inner" class="py-5 text-white">
+  <div class="container">
+    <div class="row text-center">
+      <div class="col-md-12">
+        <h3 class="display-4">合作夥伴</h3>
+        <p class="lead">九龍城浸信會嘉福幼稚園</p>
+      </div>
+    </div>
+  </div>
 </section>
+
+<div class="container mt-4 mb-5">
+
 <p class="h3">
 
 <section class="text-info text-left">
