--- a/templates/pages/team.html
+++ b/templates/pages/team.html
@@ -1,10 +1,23 @@
 {% extends "base.html" %}
+<!-- load static -->
+{% load static %}
+<!-- about title -->
+{% block title %} | 認識我們  {% endblock %}
+<!-- about main content -->
 {% block content %}
+<!-- showcase -->
+<section id="showcase-inner" class="py-5 text-white">
+  <div class="container">
+    <div class="row text-center">
+      <div class="col-md-12">
+        <h3 class="display-4">我們的團隊</h3>
+        <p class="lead">同工團隊</p>
+      </div>
+    </div>
+  </div>
+</section>
+
 <div class="container mt-4 mb-5">
-<h3>我們的團隊</h3>
-</br>
-<section class="text-warning text-left">
-      <h4>同工團隊</p></h4>
       
 <!DOCTYPE html>
 <html lang="en">
