--- a/templates/worships/worship.html
+++ b/templates/worships/worship.html
@@ -5,20 +5,7 @@
 {% block title %}Worship Sermons{% endblock %}
 
 {% block content %}
-
-<!-- showcase -->
-<section id="showcase-inner" class="py-5 text-white">
-  <div class="container">
-    <div class="row text-center">
-      <div class="col-md-12">
-        <h3 class="display-4">崇拜講道</h3>
-        <p class="lead">
-          聚會重温
-        </p>
-      </div>
-    </div>
-  </div>
-</section>
+{% include "includes/_topbar.html" with title="崇拜講道" subtitle="聚會重温" %}
 
 <!-- Breadcrumb -->
 <section id="bc" class="mt-3">
