--- a/templates/fellowship/fellowship.html
+++ b/templates/fellowship/fellowship.html
@@ -6,19 +6,10 @@
 <!-- about main content -->
 {% block content %}
 <!-- showcase -->
-<section id="showcase-inner" class="py-5 text-white">
-  <div class="container">
-    <div class="row text-center">
-      <div class="col-md-12">
-        <h3 class="display-4">團契小組</h3>
-        <p class="lead">聚會時間表</p>
-      </div>
-    </div>
-  </div>
-</section>
 
-<!DOCTYPE html>
-<html lang="zh-Hant">
+{% include "includes/_topbar.html" with title="團契小組" subtitle="聚會時間表" %}
+
+
   <head>
     <meta charset="utf-8" />
     <meta
@@ -133,5 +124,5 @@
       });
     </script>
   </body>
-</html>
+
 {% endblock %}
