--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
-{% block title %} | Login {% endblock %}
+{% block title %} | 登入 {% endblock %}
 {% block content %}
+{% include "includes/_topbar.html" with title="登入" subtitle="嘉盛浸信會" %}
+
     <section id="login" class="bg-light py-5">
       <div class="container">
         <div class="row">
