--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %} 
-{% block title %} | Register {% endblock  %}
+{% block title %} | 註冊 {% endblock  %}
 {% block content %}
+{% include "includes/_topbar.html" with title="註冊" subtitle="嘉盛浸信會" %}
+
     <section id="register" class="bg-light py-5">
       <div class="container">
         <div class="row">
