--- a/config/static/css/style.css
+++ b/config/static/css/style.css
@@ -1,9 +1,43 @@
+html {
+  background: transparent;
+}
+
 body {
-  background-color: #CCFFEB;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  min-height: 100vh;
+  background: transparent;
+}
+
+body::before {
+  content: '';
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url(/static/img/protestant.jpg) no-repeat center center;
+  background-size: cover;
+  filter: grayscale(100%);
+  -webkit-filter: grayscale(100%);
+  opacity: 0.3;
+  z-index: -1;
+}
+
+body::after {
+  content: '';
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(204, 255, 235, 0.1);
+  z-index: -1;
 }
 
 #main-footer {
-  background-color: #CCFFEB !important;
+  background-color: rgba(204, 255, 235, 0.5);
 }
 
 .footer-slogan {
@@ -45,52 +79,11 @@ img {
 .social a {
   margin-right: 0.4rem; }
 
-#showcase {
-  background: url(../img/showcase.jpg) no-repeat center/cover fixed;
-  position: relative;
-  min-height: 650px;
-  color: #fff;
-  padding-top: 6rem; }
-  #showcase .home-search {
-    min-height: 400px;
-    position: relative;
-    border-radius: 5px; }
-  #showcase .overlay {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    min-height: 400px;
-    width: 100%;
-    background: rgba(51, 51, 51, 0.8); }
-
-#services {
-  background: url(../img/building.jpg) no-repeat top center/cover fixed;
-  min-height: 300px;
-  position: relative;
-  overflow: hidden; }
-  #services::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    min-height: 100%;
-    width: 100%;
-    background: rgba(32, 134, 107, 0.8); }
-
 #showcase-inner {
-  background: url(../img/building.jpg) no-repeat top center/cover fixed;
   position: relative;
   overflow: hidden;
-  min-height: 120px; }
-  #showcase-inner::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    min-height: 100%;
-    width: 100%;
-    background: rgba(32, 134, 107, 0.8); }
+  min-height: 120px;
+  background: rgba(32, 134, 107, 0.5); }
   #showcase-inner.showcase-search {
     min-height: 180px; }
 
@@ -99,6 +92,53 @@ img {
 
 .listing-preview a {
   position: relative; }
+
+#register .card {
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
+#register .card-header {
+  background-color: rgba(0, 123, 255, 0.7) !important;
+}
+
+/* Dashboard table transparency */
+.table-responsive table {
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
+.table-responsive table thead {
+  background-color: rgba(33, 37, 41, 0.7);
+}
+
+.table-responsive table tbody tr {
+  background-color: rgba(255, 255, 255, 0.3);
+}
+
+.table-responsive table tbody tr:hover {
+  background-color: rgba(0, 123, 255, 0.2);
+}
+
+/* Sermons table transparency */
+#sermons-table {
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
+#sermons-table thead {
+  background-color: rgba(33, 37, 41, 0.7);
+  color: white;
+}
+
+#sermons-table thead th {
+  color: white;
+}
+
+#sermons-table tbody tr {
+  background-color: rgba(255, 255, 255, 0.3);
+}
+
+#sermons-table tbody tr:hover {
+  background-color: rgba(0, 123, 255, 0.2);
+}
 
 @media (max-width: 991px) {
   #showcase {
