--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -3,7 +3,7 @@
 {% block content %}
 {% include "includes/_topbar.html" with title="註冊" subtitle="嘉盛浸信會" %}
 
-    <section id="register" class="bg-light py-5">
+    <section id="register" class="py-5">
       <div class="container">
         <div class="row">
           <div class="col-md-6 mx-auto">
