--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -5,7 +5,7 @@
 <div class="container mt-4 mb-5 text-center">
   <div class="row justify-content-center">
     <div class="col-md-8 col-lg-6">
-      <img src="{% static 'img/Motto.jpg' %}" alt="Motto" class="img-fluid rounded shadow" style="max-height: 500px;">
+      <img src="{% static 'img/lords_prayer.png' %}" alt="主禱文" class="img-fluid rounded shadow" style="max-height: 500px;">
     </div>
   </div>
 </div>
