--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -1,7 +1,7 @@
 {% load static %}
 <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
   <div class="container">
-    <a class="navbar-brand" href={% url 'activities:list' %}>
+    <a class="navbar-brand" href={% url 'indexes:home' %}>
           <img src={% static "img/kslogo.png" %} class="logo" alt="" />
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup">
