--- a/templates/worships/worship.html
+++ b/templates/worships/worship.html
@@ -110,8 +110,8 @@
             <span aria-hidden="true">&laquo;</span>
           </a>
         </li>
-        {% endif %} {% for i in sermons.paginator.page_range %} {% if
-        sermons.number == i %}
+        {% endif %} {% for i in sermons.paginator.page_range %} 
+        {% if sermons.number == i %}
         <li class="page-item active">
           <a class="page-link">{{ i }}</a>
         </li>
