change background pic

--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -33,7 +33,7 @@
 
         <!-- worship -->
         <li {% if '/worship/' == request.path %} class="nav-item active mr-4" {% else %} class="nav-item mr-4" {% endif %}>
-        <a class="nav-link" href="{% url 'worships:worship' %}">崇拜</a>
+        <a class="nav-link" href="{% url 'worships:worship' %}">崇拜講道</a>
         </li>
 
         <!-- fellowship -->
