--- a/templates/worships/worship.html
+++ b/templates/worships/worship.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %} {% load static %}
 <!-- No need for {% load static %} here since base.html already has it -->
 
-{% block title %}Worship Sermons{% endblock %} {% block content %}
+{% block title %} | 崇拜講道 {% endblock %} {% block content %}
 
 <!-- showcase -->
 <section id="showcase-inner" class="py-5 text-white">
