--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,7 +17,7 @@ body::before {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url(/static/img/protestant.jpg) no-repeat center center;
+  background: url(/static/img/background.jpeg) no-repeat center center;
   background-size: cover;
   filter: grayscale(100%);
   -webkit-filter: grayscale(100%);
