--- a/templates/indexes/home.html
+++ b/templates/indexes/home.html
@@ -3,7 +3,7 @@
 <!-- loading static -->
 {% load static %}
 <!-- loading block -->
-{% block title %}嘉盛浸信會 - 首頁{%endblock %}
+{% block title %} | 首頁{%endblock %}
 <!-- loading block -->
 {% block content %}
 <!-- 顶部欢迎横幅 -->
