--- a/static/css/style.css
+++ b/static/css/style.css
@@ -62,7 +62,7 @@ body::after {
 }
 
 .btn-secondary {
-  color: #fff !important; }
+  color: #fff; }
 
 img {
   width: 100%; }
@@ -74,7 +74,7 @@ img {
 .navbar {
   opacity: 0.9;
   text-transform: uppercase;
-  background-color: #b0e5d0 !important; }
+  background-color: #b0e5d0; }
 
 .social a {
   margin-right: 0.4rem; }
@@ -98,7 +98,7 @@ img {
 }
 
 #register .card-header {
-  background-color: rgba(0, 123, 255, 0.7) !important;
+  background-color: rgba(32, 134, 107, 0.7);
 }
 
 /* Dashboard table transparency */
@@ -107,7 +107,7 @@ img {
 }
 
 .table-responsive table thead {
-  background-color: rgba(33, 37, 41, 0.7);
+  background-color: rgba(32, 134, 107, 0.7);
 }
 
 .table-responsive table tbody tr {
@@ -115,7 +115,7 @@ img {
 }
 
 .table-responsive table tbody tr:hover {
-  background-color: rgba(0, 123, 255, 0.2);
+  background-color: rgba(247, 156, 59, 0.2);
 }
 
 /* Sermons table transparency */
@@ -124,7 +124,7 @@ img {
 }
 
 #sermons-table thead {
-  background-color: rgba(33, 37, 41, 0.7);
+  background-color: rgba(32, 134, 107, 0.7);
   color: white;
 }
 
@@ -137,7 +137,7 @@ img {
 }
 
 #sermons-table tbody tr:hover {
-  background-color: rgba(0, 123, 255, 0.2);
+  background-color: rgba(247, 156, 59, 0.2);
 }
 
 @media (max-width: 991px) {
@@ -158,7 +158,7 @@ img {
   #top-bar {
     text-align: center; }
     #top-bar .social {
-      text-align: center !important; } }
+      text-align: center; } }
 
 @media (max-width: 576px) {
   #showcase h1 {
