--- a/templates/worships/worship.html
+++ b/templates/worships/worship.html
@@ -1,40 +1,15 @@
 {% extends "base.html" %} {% load static %}
 <!-- No need for {% load static %} here since base.html already has it -->
 
-{% block title %} | 崇拜講道 {% endblock %} {% block content %}
+{% block title %} | 崇拜講道 {% endblock %} 
 
-<!-- showcase -->
-<section id="showcase-inner" class="py-5 text-white">
-  <div class="container">
-    <div class="row text-center">
-      <div class="col-md-12">
-        <h3 class="display-4">崇拜講道</h3>
-        <p class="lead">聚會重温</p>
-      </div>
-    </div>
-  </div>
-</section>
+{% block content %}
+{% include "includes/_topbar.html" with title="崇拜講道" subtitle="講道重溫" %}
 
-<!-- Breadcrumb -->
-<section id="bc" class="mt-3">
-  <div class="container">
-    <nav aria-label="breadcrumb">
-      <ol class="breadcrumb">
-        <li class="breadcrumb-item">
-          <a href="{% url 'activities:list' %}">
-            <i class="fas fa-home"></i> Home</a
-          >
-        </li>
-        <li class="breadcrumb-item active">崇拜講道</li>
-      </ol>
-    </nav>
-  </div>
-</section>
 
 <!-- Listings -->
 <section id="listings" class="py-4">
   <div class="container" id="sermons-section">
-    <h3>講道重溫</h3>
 
     <!-- 篩選器 -->
     <div class="filter-section" style="margin-bottom: 20px">
