--- a/templates/newsletter/archive.html
+++ b/templates/newsletter/archive.html
@@ -80,14 +80,14 @@
   }
   
   .btn-dark-green {
-    background-color: #006400;
-    border-color: #006400;
+    background-color: rgba(247, 156, 59);
+    border-color: rgba(247, 156, 59);
     color: white;
   }
   
   .btn-dark-green:hover {
-    background-color: #004d00;
-    border-color: #004d00;
+    background-color: rgba(220, 140, 50);
+    border-color: rgba(220, 140, 50);
     color: white;
   }
 </style>
