--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -5,7 +5,7 @@
         <div class="row">
 
             <!-- Column 1: Church Intro + Social -->
-            <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
+            <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
                 <h5 class="fw-bold mb-3">嘉盛浸信會</h5>
                 <p class="text-muted">
                     我們是一群委身於敬拜、團契與服事的信仰群體，盼望在粉嶺社區見證基督的愛與真理。
@@ -27,7 +27,7 @@
             </div>
 
             <!-- Column 2: Quick Links (mirrors some nav items) -->
-            <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
+            <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
                 <h5 class="fw-bold mb-3">快速連結</h5>
                 <ul class="list-unstyled text-muted">
                     <li class="mb-2"><a href="{% url 'pages:about' %}" class="text-muted text-decoration-none">我們的歷史</a></li>
@@ -39,15 +39,25 @@
                 </ul>
             </div>
 
-            <!-- Column 3: Contact Info -->
-            <div class="col-lg-4 col-md-12">
+            <!-- Column 3: Sunday Mass -->
+            <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+                <h5 class="fw-bold mb-3">主日崇拜</h5>
+                <ul class="list-unstyled text-muted">
+                    <li class="mb-2">
+                        <i class="fas fa-clock me-2"></i>
+                        <span>逢星期日上午九時半</span>
+                    </li>
+                    <li class="mb-2">
+                        <i class="fas fa-map-marker-alt me-2"></i>
+                        <span>香港新界粉嶺嘉盛苑嘉耀閣地下</span>
+                    </li>
+                </ul>
+            </div>
+
+            <!-- Column 4: Contact Info -->
+            <div class="col-lg-3 col-md-6">
                 <h5 class="fw-bold mb-3">聯絡我們</h5>
                 <ul class="list-unstyled text-muted">
-                    <li class="mb-3">
-                        <i class="fas fa-map-marker-alt me-2"></i>
-                        <span>香港新界粉嶺嘉盛苑嘉耀閣地下<br>
-                              G/F, Ka Yiu House, Ka Shing Court, Fanling, N.T., Hong Kong</span>
-                    </li>
                     <li class="mb-2">
                         <i class="fas fa-phone me-2"></i>
                         <a href="tel:+85226767978" class="text-muted text-decoration-none">(852) 2676 7978</a>
@@ -57,13 +67,16 @@
                         <a href="mailto:contact@ksbaptist-hk.org" class="text-muted text-decoration-none">contact@ksbaptist-hk.org</a>
                     </li>
                     <li class="mb-2">
-                        <i class="fas fa-clock me-2"></i>
-                        <span>主日崇拜：上午9:30</span>
+                        <i class="fas fa-globe me-2"></i>
+                        <a href="#" class="text-muted text-decoration-none">網站地圖</a>
+                    </li>
+                    <li class="mb-2">
+                        <i class="fas fa-info-circle me-2"></i>
+                        <a href="#" class="text-muted text-decoration-none">常見問題</a>
                     </li>
                 </ul>
             </div>
         </div>
-
         <hr class="my-3 border-secondary">
 
         <div class="row">
@@ -83,8 +96,7 @@
 
 <style>
     #main-footer {
-        background-color: #b0e5d0 !important;
-        opacity: 0.9;
+        background-color: rgba(204, 255, 235, 0.9) !important;
         color: #495057;
     }
 
